# marie

./: CMakeLists.txt
src/assert/public/: assert.h
src/main/: win32_main.cpp
src/platform/: CMakeLists.txt
src/platform/private/win32/: intern.h  window.cpp
src/platform/public/: platform.h
